--- a/JobsOrderSystem/JobsOrderSystem.vbproj
+++ b/JobsOrderSystem/JobsOrderSystem.vbproj
@@ -70,6 +70,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\DBHelper.vb" />
     <Compile Include="Controllers\MainPanelController.vb" />
     <Compile Include="Forms\frmLogin.Designer.vb">
       <DependentUpon>frmLogin.vb</DependentUpon>
