login,services,carbrands

--- a/JobsOrderSystem/App.config
+++ b/JobsOrderSystem/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <JobsOrderSystem.My.MySettings>
             <setting name="connectionString" serializeAs="String">
-                <value>"Data Source=.; Database=EJOMSdb;</value>
+                <value>Server=ACER\DEV;Database=EJOMSdb;User Id=sa;Password=p@ssword;</value>
             </setting>
         </JobsOrderSystem.My.MySettings>
     </userSettings>
