--- a/JobsOrderSystem/My Project/Settings.settings
+++ b/JobsOrderSystem/My Project/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="connectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">"Data Source=.; Database=EJOMSdb;</Value>
+      <Value Profile="(Default)">Server=ACER\DEV;Database=EJOMSdb;User Id=sa;Password=p@ssword;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
