with db app config

--- a/JobsOrderSystem/App.config
+++ b/JobsOrderSystem/App.config
@@ -10,8 +10,20 @@
     </startup>
     <userSettings>
         <JobsOrderSystem.My.MySettings>
-            <setting name="connectionString" serializeAs="String">
-                <value>"Data Source=.; Database=EJOMSdb;</value>
+            <setting name="DBname" serializeAs="String">
+                <value>EJOMSdb</value>
+            </setting>
+            <setting name="DBuser" serializeAs="String">
+                <value>sa</value>
+            </setting>
+            <setting name="DBpass" serializeAs="String">
+                <value>p@ssword</value>
+            </setting>
+            <setting name="DBconn" serializeAs="String">
+                <value>Data Source=.;Initial Catalog=EJOMSdb;User ID=sa;Password=p@ssword;</value>
+            </setting>
+            <setting name="DBsource" serializeAs="String">
+                <value>.</value>
             </setting>
         </JobsOrderSystem.My.MySettings>
     </userSettings>
