--- a/JobsOrderSystem/App.config
+++ b/JobsOrderSystem/App.config
@@ -5,7 +5,7 @@
             <section name="JobsOrderSystem.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup>
+    <startup useLegacyV2RuntimeActivationPolicy="true">
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <userSettings>
@@ -24,6 +24,12 @@
             </setting>
             <setting name="DBsource" serializeAs="String">
                 <value>.</value>
+            </setting>
+            <setting name="logPath" serializeAs="String">
+                <value>C:\EJOMSLogs\</value>
+            </setting>
+            <setting name="Setting" serializeAs="String">
+                <value />
             </setting>
         </JobsOrderSystem.My.MySettings>
     </userSettings>
