--- a/JobsOrderSystem/My Project/Settings.settings
+++ b/JobsOrderSystem/My Project/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="DBsource" Type="System.String" Scope="User">
       <Value Profile="(Default)">.</Value>
     </Setting>
+    <Setting Name="logPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\EJOMSLogs\</Value>
+    </Setting>
+    <Setting Name="Setting" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
